# annalect-take-home-project

./: .env  Dockerfile  README.md  compose.yml  main.py  oil-analysis-notebook.ipynb  prod.env  pyproject.toml  settings.py
app/api/: main.py
app/api/routes/: oil.py  oil_import.py  oil_prices.py
core/: db.py  queries.py
init-scripts/: 01_create_schema.sql  02_create_tables.sql  03_insert_data.sql
models/: oil_data.py  oil_record.py  oil_update_record.py
